# QuickFind

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  RELEASE.md  install.sh  quickfind.desktop  run.sh
.github/workflows/: release.yml
src/: calc.rs  clipboard.rs  config.rs  launcher.rs  main.rs  timestamp.rs  ui.rs
