[package]
name = "quickfind"
version = "1.0.0"
edition = "2021"
authors = ["Leonardo <leonardo@example.com>"]
description = "A fast Spotlight/Rofi-like application launcher for Linux"
license = "MIT"

[features]
default = []
layer-shell = ["dep:gtk4-layer-shell"]

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
gtk4-layer-shell = { version = "0.4", optional = true }
glib = "0.20"
gio = "0.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
fuzzy-matcher = "0.3"
once_cell = "1.19"
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
